@startuml
title Filmoteca – Package Diagram (Modules)

package "Content" {
  class movie
  class series
  class genre
  class director
}

package "Users" {
  class user
  class role
  class profile
}

package "Interactions" {
  class review
  class playlist
  class playlist_item
}

' --- DEPENDENCIES ---
user --> role : assigned
user --> profile : has
user --> review : writes
user --> playlist : owns
playlist --> playlist_item : contains
playlist_item --> movie : references
playlist_item --> series : references
review --> movie : reviews
review --> series : reviews
movie --> genre : categorized by
series --> genre : categorized by
movie --> director : directed by
series --> director : directed by

@enduml
